<resources>
    <!-- Default or communal -->
    <string name="placeholder">[PLACEHOLDER]</string>
    <string name="app_name">CondominApp</string>
    <string name="app_title">CONDOMINAPP</string>
    <string name="app_welcome">Welcome to CondominApp</string>
    <string name="app_sortTitle">Sort by Title</string>
    <string name="app_sortDate">Sort by Date</string>
    <string name="app_add">Add</string>
    <string name="app_search">Search…</string>
    <string name="contentdescription_imageview">contentDescription_imageview</string>
    <string name="app_board">Board</string>
    <string name="app_cboard">Community board</string>
    <string name="app_diary">Diary</string>
    <string name="app_documents">Documents</string>
    <string name="app_incidents">Incidents</string>
    <string name="app_meetings">Meetings</string>
    <string name="app_information">Information</string>
    <string name="app_invalid_element">This element already exists</string>
    <!-- Login Main -->
    <string name="login_main_txtInfo">Use the key given by your administrator to join:</string>
    <string name="login_main_btnScan">QR</string>
    <string name="login_main_btnJoin">Join</string>
    <string name="login_main_btnLost">Key lost</string>
    <string name="login_main_edtKey">Access key</string>
    <string name="login_main_chbRemember">Remember the access key</string>
    <string name="login_main_chbStay">Keep the session open</string>
    <!-- Login Information -->
    <string name="login_info_txtInfo">Contact the administrator to retrieve the key</string>
    <string name="login_info_txtMail">Mail:</string>
    <string name="login_info_txtPhone">Phone:</string>
    <string name="login_info_btnClose">Close</string>
    <!-- Login Admin -->
    <string name="login_admin_txtInfo">Choose a community:</string>
    <!-- Menu -->
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_incidents_sortAuthor">Sort by Author</string>
    <!-- About -->
    <string name="about_git">JMedinilla/CondominApp</string>
    <string name="about_description">CondominApp creator</string>
    <string name="about_title">Javier Medinilla</string>
    <string name="about_btnClose">CLOSE</string>
    <string name="app_invalid_user">User doesn\'t exist</string>
    <!-- Forms -->
    <string name="formBoard_edtTitle">Entry title</string>
    <string name="formBoard_edtContent">Entry content</string>
    <string name="formBoard_txtTitle">New Entry</string>
    <string name="formCboard_txtTitle">New Entry</string>
    <string name="formCboard_edtTitle">Entry title</string>
    <string name="formCboard_edtContent">Entry content</string>
    <string name="formDiary_txtTitle">New Note</string>
    <string name="formDiary_edtTitle">Note title</string>
    <string name="formDiary_edtContent">Note content</string>
    <string name="formDocument_txtTitle">New Document</string>
    <string name="formDocument_edtTitle">Document title</string>
    <string name="formDocument_edtDescription">Document description</string>
    <string name="formDocument_edtLink">Document link</string>
    <string name="formMeeting_txtTitle">New Meeting</string>
    <string name="formIncident_txtTitle">New Incident</string>
    <string name="formIncident_edtTitle">Incident title</string>
    <string name="formIncident_edtContent">Incident content</string>
    <!-- Preferences -->
    <string name="pref_general_title">Login access</string>
    <string name="pref_general_remember_title">Remember access key</string>
    <string name="pref_general_remember_summary">Remember users access login key</string>
    <string name="pref_general_stay_title">Stay logged</string>
    <string name="pref_general_stay_summary">Dont close the user session</string>
    <string name="profile">Profile</string>
</resources>
