<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cboard_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="1"
        android:title="@string/app_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cboard_sortDate"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="2"
        android:title="@string/app_sortDate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cboard_sortTitle"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="3"
        android:title="@string/app_sortTitle"
        app:showAsAction="never" />

</menu>