<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jmedinilla.pi.condominapp.Activity_Login_Admin">

    <TextView
        android:id="@+id/login_admin_txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/app_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/login_admin_imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/login_admin_txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/contentdescription_imageview"
        app:srcCompat="@drawable/applogo" />

    <TextView
        android:id="@+id/login_admin_txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_admin_imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/app_welcome"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/login_admin_txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_admin_txtWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28sp"
        android:text="@string/login_admin_txtInfo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/login_admin_rcvCommunity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_admin_txtInfo">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
