<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_diary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jmedinilla.pi.condominapp.forms.Form_Diary">

    <TextView
        android:id="@+id/formDiary_txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/formDiary_txtTitle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/formDiary_btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/contentdescription_imageview"
        android:src="@android:drawable/ic_input_add" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/formDiary_tilTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formDiary_txtTitle"
        android:layout_marginTop="10dp"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hint">

        <EditText
            android:id="@+id/formDiary_edtTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/formDiary_edtTitle"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/formDiary_tilContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formDiary_tilTitle"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hint">

        <EditText
            android:id="@+id/formDiary_edtContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/formDiary_edtContent"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
